--- a/config-skeleton.json
+++ b/config-skeleton.json
@@ -1,7 +1,8 @@
 {
 	"interval" : 10,
 	"projects" : [
-		{"name" : "MIMS",
+		{
+		    "name" : "Skeleton",
 			"connector" : {
 				"name" : "dummy",
 				"args" : {}
